hphp/test/slow/namespace/double_use3.php.expectf
Fatal error: Cannot use A\C\B as B because the name was explicitly used earlier via a `use' statement on line 3 in %s/double_use3.php on line 4
